test/parser/fail/noexprlambda.ang
f : forall a:Type . List a -> List Unit
f ls = map (\c -> ) ls